updated popup until facepalm

--- a/chromoji/data/template/popup.html
+++ b/chromoji/data/template/popup.html
@@ -26,6 +26,7 @@
         <ul class="emoji-list">
             <li title="grinning" data-name="grinning">😀</li>
             <li title="grimacing" data-name="grimacing">😬</li>
+            <li title="rolling on the floor laughing rofl" data-name="rofl rolling on the floor">🤣</li>
             <li title="grin" data-name="grin">😁</li>
             <li title="joy" data-name="joy">😂</li>
             <li title="smiley" data-name="smiley">😃</li>
@@ -33,6 +34,7 @@
             <li title="sweat_smile" data-name="sweat_smile">😅</li>
             <li title="laughing" data-name="laughing">😆</li>
             <li title="innocent" data-name="innocent">😇</li>
+            <li title="drooling face" data-name="drooling face">🤤</li>
             <li title="wink" data-name="wink">😉</li>
             <li title="blush" data-name="blush">😊</li>
             <li title="slightly_smiling_face" data-name="slightly_smiling_face">🙂</li>
@@ -64,6 +66,8 @@
             <li title="worried" data-name="worried">😟</li>
             <li title="angry" data-name="angry">😠</li>
             <li title="rage" data-name="rage">😡</li>
+            <li title="sick" data-name="sick">🤢</li>
+            <li title="sneezing" data-name="sneezing">🤧</li>
             <li title="pensive" data-name="pensive">😔</li>
             <li title="confused" data-name="confused">😕</li>
             <li title="slightly_frowning_face" data-name="slightly_frowning_face">🙁</li>
@@ -93,6 +97,9 @@
             <li title="face_with_thermometer" data-name="face_with_thermometer">🤒</li>
             <li title="face_with_head_bandage" data-name="face_with_head_bandage">🤕</li>
             <li title="sleeping" data-name="sleeping">😴</li>
+            <li title="cowboy" data-name="cowboy">🤠</li>
+            <li title="clown" data-name="clown">🤡</li>
+            <li title="lying pinnochio" data-name="lying pinnochio">🤥</li>
             <li title="zzz" data-name="zzz">💤</li>
             <li title="hankey" data-name="hankey">💩</li>
             <li title="smiling_imp" data-name="smiling_imp">😈</li>
@@ -157,9 +164,12 @@
             <li title="guardsman" data-name="guardsman">💂</li>
             <li title="sleuth_or_spy" data-name="sleuth_or_spy">🕵</li>
             <li title="santa" data-name="santa">🎅</li>
+            <li title="mother christmas" data-name="mother christmas">🤶</li>
             <li title="angel" data-name="angel">👼</li>
             <li title="princess" data-name="princess">👸</li>
+            <li title="prince" data-name="prince">🤴</li>
             <li title="bride_with_veil" data-name="bride_with_veil">👰</li>
+            <li title="man_tuxedo" data-name="man_tuxedo">🤵</li>
             <li title="walking" data-name="walking">🚶</li>
             <li title="runner" data-name="runner">🏃</li>
             <li title="dancer" data-name="dancer">💃</li>
@@ -167,8 +177,10 @@
             <li title="couple" data-name="couple">👫</li>
             <li title="two_men_holding_hands" data-name="two_men_holding_hands">👬</li>
             <li title="two_women_holding_hands" data-name="two_women_holding_hands">👭</li>
+            <li title="pregnant woman" data-name="pregnant woman">🤰</li>
             <li title="bow" data-name="bow">🙇</li>
             <li title="information_desk_person" data-name="information_desk_person">💁</li>
+            <li title="face_palm" data-name="face_palm">🤦</li>
             <li title="no_good" data-name="no_good">🙅</li>
             <li title="ok_woman" data-name="ok_woman">🙆</li>
             <li title="raising_hand" data-name="raising_hand">🙋</li>
@@ -254,6 +266,8 @@
             <li title="bride_with_veil" data-name="bride_with_veil">👰🏻</li>
             <li title="person_frowning" data-name="person_frowning">🙍🏻</li>
             <li title="person_with_pouting_face" data-name="person_with_pouting_face">🙎🏻</li>
+
+            <li title="face_palm" data-name="face_palm">🤦🏻</li>
             <li title="no_good" data-name="no_good">🙅🏻</li>
             <li title="ok_woman" data-name="ok_woman">🙆🏻</li>
             <li title="information_desk_person" data-name="information_desk_person">💁🏻</li>
@@ -324,6 +338,7 @@
             <li title="bride_with_veil" data-name="bride_with_veil">👰🏼</li>
             <li title="person_frowning" data-name="person_frowning">🙍🏼</li>
             <li title="person_with_pouting_face" data-name="person_with_pouting_face">🙎🏼</li>
+            <li title="face_palm" data-name="face_palm">🤦🏼</li>
             <li title="no_good" data-name="no_good">🙅🏼</li>
             <li title="ok_woman" data-name="ok_woman">🙆🏼</li>
             <li title="information_desk_person" data-name="information_desk_person">💁🏼</li>
@@ -394,6 +409,7 @@
             <li title="bride_with_veil" data-name="bride_with_veil">👰🏽</li>
             <li title="person_frowning" data-name="person_frowning">🙍🏽</li>
             <li title="person_with_pouting_face" data-name="person_with_pouting_face">🙎🏽</li>
+            <li title="face_palm" data-name="face_palm">🤦🏽</li>
             <li title="no_good" data-name="no_good">🙅🏽</li>
             <li title="ok_woman" data-name="ok_woman">🙆🏽</li>
             <li title="information_desk_person" data-name="information_desk_person">💁🏽</li>
@@ -464,6 +480,7 @@
             <li title="bride_with_veil" data-name="bride_with_veil">👰🏾</li>
             <li title="person_frowning" data-name="person_frowning">🙍🏾</li>
             <li title="person_with_pouting_face" data-name="person_with_pouting_face">🙎🏾</li>
+            <li title="face_palm" data-name="face_palm">🤦🏾</li>
             <li title="no_good" data-name="no_good">🙅🏾</li>
             <li title="ok_woman" data-name="ok_woman">🙆🏾</li>
             <li title="information_desk_person" data-name="information_desk_person">💁🏾</li>
@@ -536,6 +553,7 @@
             <li title="bride_with_veil" data-name="bride_with_veil">👰🏿</li>
             <li title="person_frowning" data-name="person_frowning">🙍🏿</li>
             <li title="person_with_pouting_face" data-name="person_with_pouting_face">🙎🏿</li>
+            <li title="face_palm" data-name="face_palm">🤦🏿</li>
             <li title="no_good" data-name="no_good">🙅🏿</li>
             <li title="ok_woman" data-name="ok_woman">🙆🏿</li>
             <li title="information_desk_person" data-name="information_desk_person">💁🏿</li>
