add back the copy/paste section

--- a/chromoji/data/template/popup.html
+++ b/chromoji/data/template/popup.html
@@ -1938,3 +1938,10 @@
         </div>
         
 </div>
+<div class="emoji-container">
+    <input type="text" class="emoji-container-text" placeholder="Copy and Paste from here">
+</div>
+
+
+</body>
+</html>
